--- a/Meter Card and Smart Parking Meter/SupprorttingFiles/Info.plist
+++ b/Meter Card and Smart Parking Meter/SupprorttingFiles/Info.plist
@@ -2,6 +2,28 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+    
+    <key>CFBundleURLTypes</key>
+    <array>
+      <dict>
+      <key>CFBundleURLSchemes</key>
+      <array>
+        <string>fb675641376977827</string>
+      </array>
+      </dict>
+    </array>
+    <key>FacebookAppID</key>
+    <string>675641376977827</string>
+    <key>FacebookClientToken</key>
+    <string>2215f2db754a5c3745bd381a53b2028f</string>
+    <key>FacebookDisplayName</key>
+    <string>Parking Meter</string>
+
+    <key>NSCameraUsageDescription</key>
+    <string>This app requires access to camera</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>This app requires access to photo library</string>
+    
 	<key>UIAppFonts</key>
 	<array>
 		<string>Montserrat-Regular.ttf</string>
