--- a/Meter Card and Smart Parking Meter/SupprorttingFiles/Info.plist
+++ b/Meter Card and Smart Parking Meter/SupprorttingFiles/Info.plist
@@ -2,10 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>NSLocationAlwaysUsageDescription</key>
-        <string>Reason to access location background usage description</string>
-        <key>NSLocationWhenInUseUsageDescription</key>
-        <string>Reason to access location usage description</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>Please allaw access to see your location</string>
 	<key>CFBundleURLTypes</key>
 	<array>
 		<dict>
